# slack-api-schemas

./: .gitignore  .gitmodules  Cargo.toml  README.md
api_scraper/: index.js  package.json
objects/: bot.json  channel.json  file.json  file_comment.json  group.json  im.json  message.json  mpim.json  paging.json  reaction.json  reminder.json  team.json  thread_info.json  timestamp.json  user.json  user_profile.json  usergroup.json
src/: main.rs  shell.rs  test_support.rs
web/: admin.json  api.json  apps.json  auth.json  bots.json  calls.json  channels.json  chat.json  conversations.json  dialog.json  dnd.json  emoji.json  files.comments.json  files.json  groups.json  im.json  migration.json  mpim.json  oauth.json  pins.json  reactions.json  reminders.json  rtm.json  search.json  stars.json  team.json  team.profile.json  usergroups.json  usergroups.users.json  users.json  users.profile.json  views.json  workflows.json
web/objects/: channel.json  group.json  message.json  mpim.json  reminder.json  user.json  user_profile.json  usergroup.json
